--- a/index.html
+++ b/index.html
@@ -7,50 +7,6 @@
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	<div class="header">
-		<p class="name">Zach David</p>
-		<h3>Backend Developer</h3>
-		<ul>
-			<!--
-			<li>About</li>
-			<li>Tools</li>
-			<li>Projects</li>
-			-->
-		</ul>
-	</div>
-	<div class="content">
-		<div class="intro">
-			<p> I am a current Second Year College student studying Computer Science. I focus with backend development because I do not have potential skills in terms of design and this website is just in the minimal aspect. I learned how to code about Five years ago but I only did it to kill my boredom
-				<br><br>
-			Back when I was a kid, I only dreamed of becoming a Civil Engineer because it's good to build stuff that people can appreciate. If I were to turn back time, I would have studied the course and maybe i am in a different lifestyle by now. Nonetheless, here I am stuck with being an ordinary student who dreams of nothing but making money.
-				<br><br>
-			Right now, I specialize in database management, DevOps (microservices), and minor at full stack.</p>
-		</div>
-		<!--
-		<div class="learn-exp">
-			<h1>Learning Experience</h1>
-			<ul>
-				<li>
-					<div class="exp-title">
-						<p>2019-2020</p>
-					</div>
-					<div class="exp-desc">
-						<section>The Concept of Programming</section>
-						<p>Lorem Ipsum Dolor Sit Ammet</p>
-					</div>
-				</li>
-				<li>
-					<div class="exp-title">
-						<p>2021-2022</p>
-					</div>
-					<div class="exp-desc">
-						<section>Playing with some APIs</section>
-						<p>Lorem Ipsum Dolor Sit Ammet</p>
-					</div>
-				</li>
-			</ul>
-		</div>
-		-->
-	</div>
+	<h1>Yawa ka</h1>
 </body>
 </html>
