--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Zxayler</title>
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	<h1>Yawa ka</h1>
+	<div class="header">
+		<div class="title">
+			<p class="name">Zach David</p>
+			<p class="sub-name">Backend Developer</p>
+		</div>
+
+		<ul>
+			<li>
+				<img src="icons/discord.svg" width="25" height="25">
+				<a href="#">zxayler</a>
+			</li>
+			<li>
+				<img src="icons/facebook.svg" width="25" height="25">
+				<a href="#">zenzxay.bruh</a>
+			</li>
+			<li>
+				<img src="icons/email.svg" width="25" height="25">
+				<a href="#">zach.me@zxayler.tech</a>
+			</li>
+			<li>
+				<img src="icons/school.svg" width="25" height="30">
+				<a href="#">zachdavid.maregmen@g.msuiit.edu.ph<a/>
+			</li>
+		</ul>
+
+	</div>
+	<div class="content">
+		<div class="intro">
+			<p>
+			I am Zach David Maregmen, a <span>second year college student</span> studying <span>computer science</span> and my goal to create systems that are secure and stable. The biggest project that I am about to make would be cross-platform budget manager.  
+				<br><br>
+			I have written some apps before but those were third-party apps like discord bots, spotify controller, simple games and more. I also can only write medium stuff because I lack computing power from my laptop. Even with these circum-stances, I still do the most that I can.
+				<br><br>
+			I started learning how to code about half a decade ago, I learned the concepts of programming and I was able to learn some foundations whenever I try to learn a new 
+			language. 
+			</p>
+		</div>
+	</div>
 </body>
 </html>
