--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</li>
 			<li>
 				<img src="icons/facebook.svg" width="25" height="25">
-				<a href="#">zenzxay.bruh</a>
+				<a href="https://facebook.com/zenzxay.bruh">zenzxay.bruh</a>
 			</li>
 			<li>
 				<img src="icons/email.svg" width="25" height="25">
