--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Zxayler</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	<h1>Yawa ka</h1>
+	<div class="main">
+		<img class="profile-img" src="assets/image.png">
+		<div class="content">
+			<div class="name">
+				<h1>ZACH DAVID</h1>
+				<a>Backend Developer</a>
+			</div>
+			<div class="icons">
+				<img class="first-icon" src="assets/fb.svg">
+				<img src="assets/github.svg">
+				<img src="assets/twitter.svg">
+				<img src="assets/ig.svg">
+			</div>
+			<div class="lang">
+				<a class="common">I commonly use these languages</h3>
+				<section>
+					<a><span class="py">PYTHON</span> / <span class="js">JAVASCRIPT</span> / <span class="rs">RUST</span></a>
+				</section>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
