update the hrefs

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				<a>Backend Developer</a>
 			</div>
 			<div class="icons">
-				<img class="first-icon" src="assets/fb.svg">
-				<img src="assets/github.svg">
-				<img src="assets/twitter.svg">
-				<img src="assets/ig.svg">
+				<a href="https://facebook.com/zenzxay.bruh"><img class="first-icon" src="assets/fb.svg"></a>
+				<a href="https://github.com.com/zxaylex"><img src="assets/github.svg"></a>
+				<a href="#"><img src="assets/twitter.svg"></a>
+				<a href="https://instagram.com/zenzxay"><img src="assets/ig.svg"></a>
 			</div>
 			<div class="lang">
 				<a class="common">I commonly use these languages</h3>
