--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 			<div class="icons">
 				<a href="https://facebook.com/zenzxay.bruh"><img class="first-icon" src="assets/fb.svg"></a>
-				<a href="https://github.com.com/zxaylex"><img src="assets/github.svg"></a>
+				<a href="https://github.com/zxaylex"><img src="assets/github.svg"></a>
 				<a href="#"><img src="assets/twitter.svg"></a>
 				<a href="https://instagram.com/zenzxay"><img src="assets/ig.svg"></a>
 			</div>
