--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Zxayler</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="I am Zach David.">
+	<meta name="title" content="Zach David">
+	<meta name="description" content="Don't mind me, i'm just existing.">
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
