--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Zxayler</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="title" content="Zach David">
-	<meta name="description" content="Don't mind me, i'm just existing.">
+	<meta name="title" content="Zach David"/>
+	<meta name="description" content="Don't mind me, i'm just existing."/>
+	<meta name="theme-color" content="#062726"/>
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
